# lgncapi

./: .gitmodules  CMakeLists.txt  README.md
include/: lgnc_directvideo.h  lgnc_egl.h  lgnc_gamepad.h  lgnc_system.h
lib/: .gitignore  README.md
samples/: CMakeLists.txt
samples/egl/: CMakeLists.txt
samples/egl/assets/: debug.args
samples/egl/src/: callbacks.c  graphics.c  graphics.h  main.c
samples/gst/: CMakeLists.txt  appconfig.json
samples/gst/assets/: debug.env
samples/gst/src/: callbacks.c  callbacks.h  debughelper.h  graphics.c  graphics.h  gst_sample.c  gst_sample.h  main.c
src/: lgnc_directaudio.c  lgnc_directvideo.c  lgnc_egl.c  lgnc_system.c  lgnc_wrapper.h
